kustomize-units/opni/ingress/opni-ing-http.yaml
# Ingress with HTTP backend-protocol
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opni-ing-http
spec:
  ingressClassName: nginx
  tls:
  - secretName: opni-tls
    hosts:
      - ${OPNI_MONITORING_DNS}
      - ${OPNI_DASHBOARD_DNS}
  rules:
    - host: ${OPNI_MONITORING_DNS}
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: grafana-service
              port:
                number: 3000
    - host: ${OPNI_DASHBOARD_DNS}
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: opni-admin-dashboard
              port:
                number: 12080
